# Hackertyper

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  Makefile  Makefile.am  README  README.md  configure.ac  hackertyper.h.in
data/: Makefile.am  hackertyper.txt  test_data.txt  windows_ending_text.txt
doc/: hackertyper.1  hackertyper.1.md
man/: Makefile.am  hackertyper.1  hackertyper.1.md
src/: Makefile.am  hackertyper.c  hackertyper.h  hackertyper.h.in  main.c
